# galactic-streaming

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  galaxy_builder.cpp  integrate_main.cpp  main_hello.cpp  test_integrate_adaptive.cpp  test_shock_acceleration.cpp
include/: coupled_pde.hpp  galaxy.hpp  grid.hpp  hdf5_output.hpp  hello_code.hpp  integrator.hpp  integrator_RK2.hpp  integrator_RK4.hpp  integrator_euler.hpp  params.hpp  shock_acceleration.hpp  units.hpp  utils.hpp
include/integrators/: integrator_RK2.hpp
scripts/: plot_shock_acceleration.py
src/: CMakeLists.txt  coupled_pde.cpp  galaxy.cpp  hdf5_output.cpp  hello_code.cpp  integrator.cpp  integrator_RK2.cpp  integrator_RK4.cpp  integrator_euler.cpp  params.cpp  shock_acceleration.cpp  utils.cpp
src/integrators/: CMakeLists.txt  integrator.cpp  integrator_RK2.cpp  integrator_RK4.cpp  integrator_euler.cpp
